@@ -45,6 +45,7 @@ uptodate=org.apache.tools.ant.taskdefs.UpToDate
 apply=org.apache.tools.ant.taskdefs.Transform
 record=org.apache.tools.ant.taskdefs.Recorder
 cvspass=org.apache.tools.ant.taskdefs.CVSPass
+typedef=org.apache.tools.ant.taskdefs.Typedef
 
 # optional tasks
 script=org.apache.tools.ant.taskdefs.optional.Script
